Fix navbar items get sized wrong on smaller width displays

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,6 +1,5 @@
 .navbar {
   width: 100%;
-  table-layout: fixed;
   border-collapse: collapse;
   
   /* Synchronize 'height' in this with one in navbar.css! */
